<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.birth.BirthActivity5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/tv_fields"
            android:text="@string/tempat_dilahirkan" />
        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/nama_rumah_sakit"
            android:id="@+id/edt_nama_rs"
            android:inputType="text" />
        <TextView
            style="@style/tv_fields"
            android:layout_marginTop="5dp"
            android:text="@string/jenis_kelahiran" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_birth" />
        <TextView
            style="@style/tv_fields"
            android:layout_marginTop="5dp"
            android:text="@string/penolong_kelahiran" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_doctor" />
        <TextView
            style="@style/tv_fields"
            android:layout_marginTop="5dp"
            android:text="@string/foto_surat_keterangan_kelahiran" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/img_kelahiran"
            android:src="@drawable/ic_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_fields"
                android:id="@+id/btn_camera"
                android:text="@string/camera"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_fields"
                android:id="@+id/btn_gallery"
                android:text="@string/gallery"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btn_continue"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            style="@style/btn_continue" />
    </LinearLayout>

</ScrollView>