<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.birth.BirthActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            style="@style/tv_fields"
            android:text="@string/nama_saksi_1"
            android:id="@+id/tv_saksi_1"/>
        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/nama_saksi_1"
            android:id="@+id/edt_nama_saksi_1"
            android:inputType="text" />
        <TextView
            style="@style/tv_fields"
            android:text="@string/nik_saksi_1"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_nik_saksi_1" />
        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/_317xxxxxxx"
            android:id="@+id/edt_nik_saksi_1"
            android:inputType="number" />
        <TextView
            style="@style/tv_fields"
            android:layout_marginTop="5dp"
            android:text="@string/foto_ktp_saksi_1" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/img_ktp_saksi_1"
            android:src="@drawable/ic_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_fields"
                android:id="@+id/btn_camera_saksi_1"
                android:text="@string/camera"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_fields"
                android:id="@+id/btn_gallery_saksi_1"
                android:text="@string/gallery"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            style="@style/tv_fields"
            android:layout_marginTop="5dp"
            android:text="@string/nama_saksi_2"
            android:id="@+id/tv_saksi_2"/>
        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/nama_saksi_2"
            android:id="@+id/edt_nama_saksi_2"
            android:inputType="text" />
        <TextView
            style="@style/tv_fields"
            android:text="@string/nik_saksi_2"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_nik_saksi_2" />
        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/_317xxxxxxx"
            android:id="@+id/edt_nik_saksi_2"
            android:inputType="number" />
        <TextView
            style="@style/tv_fields"
            android:layout_marginTop="5dp"
            android:text="@string/foto_ktp_saksi_2" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/img_ktp_saksi_2"
            android:src="@drawable/ic_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_fields"
                android:id="@+id/btn_camera_saksi_2"
                android:text="@string/camera"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_fields"
                android:id="@+id/btn_gallery_saksi_2"
                android:text="@string/gallery"
                android:background="@drawable/rounded_button"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            style="@style/tv_fields"
            android:text="@string/nomor_kontak_saksi_1"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_kontak_saksi_1" />

        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/_081xxxxxxxx"
            android:id="@+id/edt_kontak_saksi_1"
            android:inputType="number" />

        <TextView
            style="@style/tv_fields"
            android:text="@string/nomor_kontak_saksi_2"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_kontak_saksi_2" />

        <EditText
            style="@style/edt_fields"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/_081xxxxxxxx"
            android:id="@+id/edt_kontak_saksi_2"
            android:inputType="number" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btn_continue"
            android:text="@string/lanjutkan"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            style="@style/btn_continue" />
    </LinearLayout>

</ScrollView>