<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.birth.BirthActivity">
    
    <ImageView
        android:layout_width="301dp"
        android:layout_height="242dp"
        android:id="@+id/img_clue"
        android:src="@drawable/petunjuk"
        android:layout_marginTop="138dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clue"
        android:text="@string/petunjuk"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/img_clue"
        android:layout_marginTop="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/document"
        android:text="@string/petunjuk1"
        app:layout_constraintTop_toBottomOf="@id/clue"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/clue" />

    <TextView
        android:id="@+id/requirements1"
        style="@style/requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ket_ortu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/document" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requirements2"
        style="@style/requirements"
        android:text="@string/ket_saksi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/requirements1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requirements3"
        style="@style/requirements"
        android:text="@string/ket_bidan_rs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/requirements2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requirementsall"
        android:text="@string/petunjuk2"
        app:layout_constraintTop_toBottomOf="@id/requirements3"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/clue" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/btn_continue"
        android:text="@string/lanjutkan"
        android:background="@drawable/custom_button"
        style="@style/btn_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>